--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "admin",
     "database": "phones_development",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "seederStorage": "sequelize"
   },
   "test": {
     "username": "root",
