--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.4"
