--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "query-parser-express": "^1.0.7",
     "sequelize": "^6.37.4",
     "yup": "^1.4.0"
   },
